@@ -1,3 +1,8 @@
+2006-08-04  Francis Kung  <fkung@redhat.com>
+
+	* java/awt/BasicStroke.java
+	(dashedStroke): Implemented.
+
 2006-08-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* javax/management/BadAttributeValueExpException.java,
